9/01/2003   version 0.1.14  Ian Lewis  <IanLewis@member.fsf.org>

    * Changed the XMLDocument validate() method to be checkWellFormedness().
      Changed the implementation of isValidated() to be named isWellFormed() and
      isWellFormed() now calls checkWellFormedNess to find out out whether it is
      well-formed or not.

8/31/2003   version 0.1.13  Ian Lewis  <IanLewis@member.fsf.org>

    * Fixed bug with createElement() creating elements with a null local name
      when element nodes are renamed. Used createElementNS() instead.
    * Fixed performance issues with opening files (that weren't even that
      large.)

8/30/2003   version 0.1.12  Ian Lewis  <IanLewis@member.fsf.org>

    * Fixed a very bad bug where jsXe was not writing anything to files when
      saving because the OutputStreamWriter was not flushed.

8/30/2003   version 0.1.11  Ian Lewis  <IanLewis@member.fsf.org>

    * Added an indent width option to the options dialog. Currently only used
      when formatting a document while serializing and as the tab width in the
      source view.

8/29/2003   version 0.1.10  Ian Lewis  <IanLewis@member.fsf.org>

    * Fixed indentation when serializing a document.
    * Changed the layout of the options dialog. It looks a little better now.

8/28/2003   version 0.1.9  Ian Lewis  <IanLewis@member.fsf.org>

    * Changed the DOMSerializer class to conform to the DOM3 standard
      DOMWriter (old) interface. Used the java.io.OutputStreamWriter class for
      encoding. Added an encoding option to the option dialog.
    * Fixed bug in DefaultXMLDocument that messed up which model the object was
      using.
    * Fixed bug with createElement() creating elements with a null local name.
      Used createElementNS() instead.

8/24/2003   version 0.1.7   Ian Lewis  <IanLewis@member.fsf.org>

    * Updated Serialization and options dialog.

8/24/2003   version 0.1.6   Ian Lewis  <IanLewis@member.fsf.org>
