@@ -124,7 +124,7 @@ public class FileSaveAsAction extends AbstractAction {
                 
                 //If the document is already open and
                 //it isn't the current document
-                if (doc != null && doc.equals(view.getDocumentView().getXMLDocument())) {
+                if (doc != null && !doc.equals(view.getDocumentView().getXMLDocument())) {
                     jsXe.closeXMLDocument(view, doc);
                     currentdoc.saveAs(selectedFile);
                 } else {
